# golang-walrus

./: .gitignore
src/: lib.rs
v1/: Cargo.toml  bindings.go  go.mod
v1/example/: example  main.go
v2/: Cargo.toml  MIGRATION.md  README.md  certify_blob.go  example.go  go.mod  go.sum  walrus.go
v2/debug_go/: metadata.go  test_correct_deserialize.go
v2/example/: example.go
v2/src/: lib.rs
